...
        // PRAISE
        DhikrEntity(
            id = BuiltInDhikrIds.TAHLEEL.id,
            catalogKey = BuiltInDhikrIds.TAHLEEL.catalogKey,
            title = "Tahleel",
            arabic = "لَا إِلٰهَ إِلَّا ٱللَّٰهُ",
            transliteration = "La ilaha illallah",
            translation = "Tahleel",
            audioUrl = "https://dhikrs.awrad.app/1736077531573-g8kajuv6fww-tahleel.mp3",
            audioFileName = "tahleel.mp3",
            category = DhikrCategory.PRAISE,
            audioCountPerPlay = 2
        ),
...
